--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <div class="heading">
-        <h3>Countdown Till</h3>
+        <h3>Michael's Christmas countdown</h3>
         <h1>Christmas Day</h1>
       </div>
       <div class="countdown">
